# University_Projects

./: Defs.h  Pokemon.c  Pokemon.h  README.md
C++Project/: Animal.cpp  Animal.h  CMakeLists.txt  CPP_FARM  Chicken.cpp  Chicken.h  ChickenFarm.cpp  ChickenFarm.h  Costs.h  Cow.cpp  Cow.h  CowFarm.cpp  CowFarm.h  Exceptions.h  Farm.cpp  Farm.h  Market.cpp  Market.h  README.md  Sheep.cpp  Sheep.h  SheepFarm.cpp  SheepFarm.h  farmMarket.cpp  makefile
C_PROJECT/: README.md
C_Project/: CMakeLists.txt  MainFirst.c
C_SECOND_PROJECT/: BattleByCategory.c  BattleByCategory.h  CMakeLists.txt  Defs.h  LinkedList.c  LinkedList.h  MainSecond.c  MaxHeap.c  MaxHeap.h  Pokemon.c  Pokemon.h  README.md  a.out  makefile
JavaProject/: README.md
JavaProject/JavaProject_DSA/: AVL.java  AVLNode.java  HashTable.java  ObjectWithCoordinates.java  ObjectWithCoordinatesImpl.java  PointLinkedList.java  StudentSolution.java
hw8/: Polynomial_derivatives_integral.py  README.md
